# Bev-AI

./: .deployment_validation  .dockerignore  .env  .env.cross_node  .env.example  .env.fixed  .env.missing  .env.oracle1  .env.oracle1.complete  .env.secure  .env.thanos  .env.thanos.complete  .gitignore  AI_ML_RAG_INFRASTRUCTURE_ANALYSIS.md  ANALYSIS_REPORT.md  AUTONOMOUS_DEPLOYMENT_FIXING_PROMPT.md  AUTONOMOUS_DEPLOYMENT_INFRASTRUCTURE_BUILDER.md  BEV_AI_ASSISTANT_PLATFORM_DOCUMENTATION.md  BEV_COMPLETE_DOCUMENTATION_INDEX.md  BEV_DEPLOYMENT_ISSUES_ANALYSIS.md  BEV_DISTRIBUTION_STRATEGY.md  BEV_ENTERPRISE_DEPLOYMENT_BLOCKERS_ANALYSIS.md  BEV_ENTERPRISE_INFRASTRUCTURE_DEPLOYMENT_GUIDE.md  BEV_FRONTEND_GAP_ANALYSIS.md  BEV_OPERATIONS_DEVELOPER_GUIDE.md  BEV_OSINT_FRAMEWORK_TECHNICAL_SPECIFICATION.md  BEV_PLATFORM_COMPATIBILITY_AUDIT.md  BEV_ULTIMATE_COMPLETION_SUMMARY.md  BRUTAL_DEPLOYMENT_REALITY_CHECK.md  CLAUDE.md  CLEANUP_SUMMARY.md  COMPLETE_SYSTEM_DISCOVERY.md  COMPREHENSIVE_RESOURCE_ANALYSIS.md  CURRENT_STATE.md  CURRENT_STATE_COMPLETE.md  DEPLOYMENT_CERTIFICATION.md  DEPLOYMENT_GUIDE_VAULT_FIX.md  DEPLOYMENT_README.md  DEPLOYMENT_SUCCESS_SUMMARY.md  DEPLOYMENT_SUMMARY.md  (+121 more)
.claude/: settings.local.json
.github/: README.md  SETUP.md
.serena/: project.yml
alerts/: arm_performance.yml  distributed_services.yml  oracle1_services.yml
archived-dockerfiles/: Dockerfile.adaptive_learning  Dockerfile.defense_automation  Dockerfile.economics_processor  Dockerfile.knowledge_evolution
bev-frontend/: .gitignore  PHASE2_COMPLETE.md  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  validate-security.sh  vite.config.ts
bev-frontend/src-tauri/: Cargo.toml  tauri.conf.json  tsconfig.json
bev-frontend/src-tauri/src/: main.rs  osint_api.rs  osint_handlers.rs  proxy_enforcer.rs  security.rs
claudedocs/: AI_WORKLOAD_GPU_PERFORMANCE_ANALYSIS.md  BEVDOCS_FRAMEWORK_VS_IMPLEMENTATION_GAP_ANALYSIS.md  BEV_AI_ASSISTANT_TO_OSINT_EVOLUTION_ANALYSIS.md  BEV_COMPLETE_UX_FLOW_ANALYSIS.md  BEV_COMPREHENSIVE_SECURITY_ASSESSMENT.md  BEV_DEPLOYMENT_EXECUTION_GUIDE.md  BEV_DEPLOYMENT_SIMULATION_REPORT.md  BEV_ENTERPRISE_DEPLOYMENT_STRATEGY.md  BEV_ENTERPRISE_PLATFORM_ANALYSIS.md  BEV_FRONTEND_CONNECTIVITY_AUDIT_REPORT.md  DEPLOYMENT_SCRIPT_ANALYSIS_REAL_VS_POLLUTION.md  FINAL_COMPREHENSIVE_PLATFORM_ANALYSIS_REPORT.md  GITHUB_ACTIONS_CICD_ANALYSIS.md  ORACLE1_FINAL_DEPLOYMENT_ASSESSMENT.md  ORACLE1_RESOURCE_ALLOCATION_ANALYSIS.md  PHASE_C_CREATIVE_VOICE_AUDIO_SYSTEMS_RESEARCH.md  PREFLIGHT_CHECK_REPORT.md  comprehensive_deployment_validation_report.md  oracle1-monitoring-infrastructure-implementation.md
companion-standalone/: .env.example  DEPLOYMENT_SUMMARY.md  README.md  (+4 more)
tor/: torrc  (+7 more)
(+883 files in other folders)
