[package]
name = "bev-frontend"
version = "0.1.0"
description = "BEV OSINT Framework - Security-First Intelligence Platform"
authors = ["BEV Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["shell-open", "window-all", "protocol-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["socks", "rustls-tls", "json"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# Security-critical dependencies
tor-config = "0.23"
arti = "1.2"  # Tor client in Rust
arti-client = "0.23"
futures = "0.3"

# Graph and data processing
neo4rs = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]